syntax = "proto3";

option csharp_namespace = "Client";

package long_greet;

message LongGreet {
  string first_name = 1;
  string last_name = 2;
}

message LongGreetRequest {
  LongGreet greet = 1;
}

message LongGreetResponse {
  string result = 1;
}

service LongGreetService {
  rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {}
}